# elements

./: .gitignore  NOTES.md  README.md  aclocal.m4  autogen.sh  configure.ac  meson.build
data/: Makefile.am  elements.desktop.in
data/config/: Makefile.am  elements.xml
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
m4/: elem_auto.m4  elem_check_cflag.m4
src/: Makefile.am  main.vala  meson.build
vapi/: config.vapi
